@@ -1,5 +1,15 @@
 2011-11-28  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG debugCall() mechanism only works on X86 and X86-64
+        https://bugs.webkit.org/show_bug.cgi?id=73282
+
+        Reviewed by Oliver Hunt.
+
+        * dfg/DFGAssemblyHelpers.h:
+        (JSC::DFG::AssemblyHelpers::debugCall):
+
+2011-11-28  Filip Pizlo  <fpizlo@apple.com>
+
         DFG non-X86 ArithDiv does speculation failure after mutating state,
         without a value recovery
         https://bugs.webkit.org/show_bug.cgi?id=73286
